--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -3,6 +3,7 @@
     "appName": "Hotel Pet CA",
     "webDir": "www",
     "bundledWebRuntime": false,
+    "npmClient": "npm",
     "plugins": {
         "SplashScreen": {
             "launchShowDuration": 2000,
