--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "build": "cp -r js/* www/js/ && cp -r css/* www/css/",
+    "build": "xcopy /E /Y js www\\js && xcopy /E /Y css www\\css",
     "android:sync": "npx cap sync android",
     "android:copy": "npx cap copy android",
     "android:open": "npx cap open android",
