[dyad] Criei o script 'android:full-build' para garantir que o código web seja sincronizado com o projeto Android antes de compilar o APK. - wrote 1 file(s) + extra files edited outside of Dyad

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "android:copy": "npx cap copy android",
     "android:open": "npx cap open android",
     "android:build": "cd android && gradlew assembleDebug",
-    "android:release": "cd android && gradlew assembleRelease"
+    "android:release": "cd android && gradlew assembleRelease",
+    "android:full-build": "npm run build && npm run android:sync && npm run android:build"
   },
   "keywords": [],
   "author": "",
