--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "android:sync": "npx cap sync android",
-    "android:copy": "npx cap copy android",
+    "build": "xcopy /E /Y js www\\js && xcopy /E /Y css www\\css",
+    "android:sync": "npm run build && npx cap sync android",
+    "android:copy": "npm run build && npx cap copy android",
     "android:open": "npx cap open android",
     "android:build": "cd android && gradlew assembleDebug",
-    "android:release": "cd android && gradlew assembleRelease"
+    "android:release": "cd android && gradlew assembleRelease",
+    "android:full-build": "npm run android:sync && npm run android:build"
   },
   "keywords": [],
   "author": "",
